--- a/ux.html
+++ b/ux.html
@@ -46,7 +46,7 @@
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='http://noodle.applytojob.com/apply/tQAi8F94rj/Lead-Product-Designer-UIUX-Noodlecom'>Lead Product Designer (UI/UX) | Noodle.com - The Noodle Companies - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://sharpist.join.com/jobs/271285-ui-ux-designer'>Job @ Sharpist (Berlin): UI/(UX) Designer | JOIN</a></h5> 
@@ -65,7 +65,7 @@
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://join.join.com/jobs/271279-ux-designer-f-m-d'>Job @ JOIN Solutions (Berlin): UX Designer (f/m/d) | JOIN</a></h5> 
+<h5><a href='https://join.join.com/jobs/271279-ux-designer-f-m-d'>Job @ JOIN Solutions (Berlin): UX Designer (f/m/d) | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -236,16 +236,16 @@ taking down all barriers and disrupting the trading experience, we're helping ne
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/praxis-engineering/job/oBeDafwm'>Praxis Engineering Careers - UI/UX Designer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/praxis-engineering/job/oBeDafwm'>Praxis Engineering Careers - UI/UX Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kar.wd1.myworkdayjobs.com/en-US/KAR_Careers/job/US---IL---Chicago-DRIVIN/UX-UI-Designer_R-227204?source=BuiltInChicago'>UX/UI Designer</a></h5> 
+<h5><a href='https://kar.wd1.myworkdayjobs.com/en-US/KAR_Careers/job/US---IL---Chicago-DRIVIN/UX-UI-Designer_R-227204?source=BuiltInChicago'>UX/UI Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>7 hours ago ... In this role you will focus on multiple facets of the design process including user 
 research, interaction design, data visualization, prototyping, and the production?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/brandwatch/job/o33DafwD'>Brandwatch Careers - Product/UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/brandwatch/job/o33DafwD'>Brandwatch Careers - Product/UX Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -465,7 +465,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
