--- a/biostatistics.html
+++ b/biostatistics.html
@@ -70,7 +70,7 @@
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://ppdi.referrals.selectminds.com/jobs/principal-biostatistician-3469'>Principal Biostatistician - PPD Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/principal-biostatistician-3469'>Principal Biostatistician - PPD Careers</a></h5> 
 <p><span class="badge badge-light">North Carolina, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -95,7 +95,7 @@ team regarding statistical methods for data analysis of clinical trials. Provide
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oOrAafwJ&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=npSsSKwQ'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oOrAafwJ&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=npSsSKwQ'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -111,7 +111,7 @@ team regarding statistical methods for data analysis of clinical trials. Provide
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TTi1/743999687569952-senior-biostatistican'>TTi Senior Biostatistican | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TTi1/743999687569952-senior-biostatistican'>TTi Senior Biostatistican | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -139,7 +139,7 @@ team regarding statistical methods for data analysis of clinical trials. Provide
 <p><span class="badge badge-light">Warsaw</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/ovrAafwq'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/premier-research/job/ovrAafwq'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -282,7 +282,7 @@ Develops statistical analysis plans and reporting specifications for simple to?.
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistician-ii-3125'>Biostatistician II - PPD Careers</a></h5> 
+<h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistician-ii-3125'>Biostatistician II - PPD Careers</a></h5> 
 <p><span class="badge badge-light">Bengaluru, India</span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
